syntax = "proto3";

package skyclust.provider.v1;

option go_package = "skyclust/api/proto/v1;providerv1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// CloudProviderService defines the gRPC service for cloud provider operations
service CloudProviderService {
  // Provider Information
  rpc GetProviderInfo(GetProviderInfoRequest) returns (GetProviderInfoResponse);
  
  // Instance Management
  rpc ListInstances(ListInstancesRequest) returns (ListInstancesResponse);
  rpc CreateInstance(CreateInstanceRequest) returns (CreateInstanceResponse);
  rpc DeleteInstance(DeleteInstanceRequest) returns (DeleteInstanceResponse);
  rpc GetInstanceStatus(GetInstanceStatusRequest) returns (GetInstanceStatusResponse);
  rpc StartInstance(StartInstanceRequest) returns (StartInstanceResponse);
  rpc StopInstance(StopInstanceRequest) returns (StopInstanceResponse);
  rpc RestartInstance(RestartInstanceRequest) returns (RestartInstanceResponse);
  
  // Region Management
  rpc ListRegions(ListRegionsRequest) returns (ListRegionsResponse);
  
  // Cost Estimation
  rpc GetCostEstimate(GetCostEstimateRequest) returns (GetCostEstimateResponse);
  
  // Health Check
  rpc HealthCheck(google.protobuf.Empty) returns (HealthCheckResponse);
  
  // VM SSH Access
  rpc GetInstanceSSHConfig(GetInstanceSSHConfigRequest) returns (GetInstanceSSHConfigResponse);
  rpc CreateInstanceSSHTunnel(CreateInstanceSSHTunnelRequest) returns (CreateInstanceSSHTunnelResponse);
  rpc CloseInstanceSSHTunnel(CloseInstanceSSHTunnelRequest) returns (CloseInstanceSSHTunnelResponse);
  rpc ExecuteInstanceCommand(ExecuteInstanceCommandRequest) returns (ExecuteInstanceCommandResponse);
  
  // Key Pair Management
  rpc CreateKeyPair(CreateKeyPairRequest) returns (CreateKeyPairResponse);
  rpc DeleteKeyPair(DeleteKeyPairRequest) returns (DeleteKeyPairResponse);
  rpc ListKeyPairs(ListKeyPairsRequest) returns (ListKeyPairsResponse);
  rpc ImportKeyPair(ImportKeyPairRequest) returns (ImportKeyPairResponse);
}

// Provider Information
message GetProviderInfoRequest {}

message GetProviderInfoResponse {
  string name = 1;
  string version = 2;
  repeated string supported_regions = 3;
  map<string, string> capabilities = 4;
}

// Instance Management
message ListInstancesRequest {
  string region = 1;
  map<string, string> filters = 2;
  int32 page_size = 3;
  string page_token = 4;
}

message ListInstancesResponse {
  repeated Instance instances = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

message CreateInstanceRequest {
  string name = 1;
  string type = 2;
  string region = 3;
  string image_id = 4;
  map<string, string> tags = 5;
  string user_data = 6;
  
  // Network Configuration
  string vpc_id = 7;
  string subnet_id = 8;
  repeated string security_groups = 9;
  bool public_ip = 10;
  
  // Key Pair Configuration
  string key_pair_id = 11;
  string key_pair_name = 12;
  
  // Storage Configuration
  int32 root_volume_size = 13; // GB
  string root_volume_type = 14;
}

message CreateInstanceResponse {
  Instance instance = 1;
}

message DeleteInstanceRequest {
  string instance_id = 1;
  string region = 2;
}

message DeleteInstanceResponse {
  bool success = 1;
  string message = 2;
}

message GetInstanceStatusRequest {
  string instance_id = 1;
  string region = 2;
}

message GetInstanceStatusResponse {
  string instance_id = 1;
  string status = 2;
  google.protobuf.Timestamp last_updated = 3;
}

message StartInstanceRequest {
  string instance_id = 1;
  string region = 2;
}

message StartInstanceResponse {
  bool success = 1;
  string message = 2;
}

message StopInstanceRequest {
  string instance_id = 1;
  string region = 2;
  bool force = 3;
}

message StopInstanceResponse {
  bool success = 1;
  string message = 2;
}

message RestartInstanceRequest {
  string instance_id = 1;
  string region = 2;
}

message RestartInstanceResponse {
  bool success = 1;
  string message = 2;
}

// Region Management
message ListRegionsRequest {}

message ListRegionsResponse {
  repeated Region regions = 1;
}

// Cost Estimation
message GetCostEstimateRequest {
  string instance_type = 1;
  string region = 2;
  string duration = 3; // e.g., "1h", "1d", "1m"
}

message GetCostEstimateResponse {
  string instance_type = 1;
  string region = 2;
  string duration = 3;
  double cost = 4;
  string currency = 5;
}

// Health Check
message HealthCheckResponse {
  bool healthy = 1;
  string message = 2;
  google.protobuf.Timestamp timestamp = 3;
}

// Common Types
message Instance {
  string id = 1;
  string name = 2;
  string status = 3;
  string type = 4;
  string region = 5;
  google.protobuf.Timestamp created_at = 6;
  map<string, string> tags = 7;
  string public_ip = 8;
  string private_ip = 9;
  string provider = 10;
}

message Region {
  string id = 1;
  string name = 2;
  string display_name = 3;
  string status = 4;
}

// VM SSH Access Messages
message GetInstanceSSHConfigRequest {
  string instance_id = 1;
  string region = 2;
  string key_pair_name = 3;
}

message GetInstanceSSHConfigResponse {
  InstanceSSHConfig ssh_config = 1;
}

message CreateInstanceSSHTunnelRequest {
  string instance_id = 1;
  string region = 2;
  int32 local_port = 3;
  int32 remote_port = 4;
  string key_pair_name = 5;
}

message CreateInstanceSSHTunnelResponse {
  string tunnel_id = 1;
  string local_endpoint = 2;
  bool success = 3;
  string message = 4;
}

message CloseInstanceSSHTunnelRequest {
  string tunnel_id = 1;
}

message CloseInstanceSSHTunnelResponse {
  bool success = 1;
  string message = 2;
}

message ExecuteInstanceCommandRequest {
  string instance_id = 1;
  string region = 2;
  string command = 3;
  int32 timeout_seconds = 4;
  string key_pair_name = 5;
}

message ExecuteInstanceCommandResponse {
  string stdout = 1;
  string stderr = 2;
  int32 exit_code = 3;
  bool success = 4;
}

message InstanceSSHConfig {
  string host = 1;
  int32 port = 2;
  string username = 3;
  string private_key = 4;
  string key_pair_name = 5;
  string bastion_host = 6;
  int32 bastion_port = 7;
  string bastion_username = 8;
  string bastion_private_key = 9;
}

// Key Pair Management Messages
message CreateKeyPairRequest {
  string key_pair_name = 1;
  string region = 2;
  map<string, string> tags = 3;
}

message CreateKeyPairResponse {
  KeyPair key_pair = 1;
  string private_key = 2; // Only returned on creation
}

message DeleteKeyPairRequest {
  string key_pair_name = 1;
  string region = 2;
}

message DeleteKeyPairResponse {
  bool success = 1;
  string message = 2;
}

message ListKeyPairsRequest {
  string region = 1;
  map<string, string> filters = 2;
}

message ListKeyPairsResponse {
  repeated KeyPair key_pairs = 1;
}

message ImportKeyPairRequest {
  string key_pair_name = 1;
  string region = 2;
  string public_key = 3;
  map<string, string> tags = 4;
}

message ImportKeyPairResponse {
  KeyPair key_pair = 1;
}

message KeyPair {
  string key_pair_id = 1;
  string key_pair_name = 2;
  string fingerprint = 3;
  string region = 4;
  map<string, string> tags = 5;
  google.protobuf.Timestamp created_at = 6;
}

