syntax = "proto3";

package skyclust.provider.v1;

option go_package = "skyclust/api/proto/v1;providerv1";

import "google/protobuf/timestamp.proto";

// IAMService defines the gRPC service for IAM operations
service IAMService {
  // User Management
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  
  // Group Management
  rpc CreateGroup(CreateGroupRequest) returns (CreateGroupResponse);
  rpc DeleteGroup(DeleteGroupRequest) returns (DeleteGroupResponse);
  rpc ListGroups(ListGroupsRequest) returns (ListGroupsResponse);
  rpc AddUserToGroup(AddUserToGroupRequest) returns (AddUserToGroupResponse);
  rpc RemoveUserFromGroup(RemoveUserFromGroupRequest) returns (RemoveUserFromGroupResponse);
  
  // Role Management
  rpc CreateRole(CreateRoleRequest) returns (CreateRoleResponse);
  rpc DeleteRole(DeleteRoleRequest) returns (DeleteRoleResponse);
  rpc ListRoles(ListRolesRequest) returns (ListRolesResponse);
  rpc AttachRolePolicy(AttachRolePolicyRequest) returns (AttachRolePolicyResponse);
  rpc DetachRolePolicy(DetachRolePolicyRequest) returns (DetachRolePolicyResponse);
  
  // Policy Management
  rpc CreatePolicy(CreatePolicyRequest) returns (CreatePolicyResponse);
  rpc DeletePolicy(DeletePolicyRequest) returns (DeletePolicyResponse);
  rpc ListPolicies(ListPoliciesRequest) returns (ListPoliciesResponse);
  rpc GetPolicy(GetPolicyRequest) returns (GetPolicyResponse);
  
  // Access Key Management
  rpc CreateAccessKey(CreateAccessKeyRequest) returns (CreateAccessKeyResponse);
  rpc DeleteAccessKey(DeleteAccessKeyRequest) returns (DeleteAccessKeyResponse);
  rpc ListAccessKeys(ListAccessKeysRequest) returns (ListAccessKeysResponse);
}

// User Management Messages
message CreateUserRequest {
  string username = 1;
  string path = 2;
  map<string, string> tags = 3;
}

message CreateUserResponse {
  IAMUser user = 1;
}

message DeleteUserRequest {
  string username = 1;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

message ListUsersRequest {
  string path_prefix = 1;
  int32 max_items = 2;
  string marker = 3;
}

message ListUsersResponse {
  repeated IAMUser users = 1;
  bool is_truncated = 2;
  string marker = 3;
}

message GetUserRequest {
  string username = 1;
}

message GetUserResponse {
  IAMUser user = 1;
}

message UpdateUserRequest {
  string username = 1;
  string new_username = 2;
  string new_path = 3;
}

message UpdateUserResponse {
  IAMUser user = 1;
}

// Group Management Messages
message CreateGroupRequest {
  string group_name = 1;
  string path = 2;
}

message CreateGroupResponse {
  IAMGroup group = 1;
}

message DeleteGroupRequest {
  string group_name = 1;
}

message DeleteGroupResponse {
  bool success = 1;
  string message = 2;
}

message ListGroupsRequest {
  string path_prefix = 1;
  int32 max_items = 2;
  string marker = 3;
}

message ListGroupsResponse {
  repeated IAMGroup groups = 1;
  bool is_truncated = 2;
  string marker = 3;
}

message AddUserToGroupRequest {
  string username = 1;
  string group_name = 2;
}

message AddUserToGroupResponse {
  bool success = 1;
  string message = 2;
}

message RemoveUserFromGroupRequest {
  string username = 1;
  string group_name = 2;
}

message RemoveUserFromGroupResponse {
  bool success = 1;
  string message = 2;
}

// Role Management Messages
message CreateRoleRequest {
  string role_name = 1;
  string assume_role_policy_document = 2;
  string description = 3;
  int32 max_session_duration = 4;
  map<string, string> tags = 5;
}

message CreateRoleResponse {
  IAMRole role = 1;
}

message DeleteRoleRequest {
  string role_name = 1;
}

message DeleteRoleResponse {
  bool success = 1;
  string message = 2;
}

message ListRolesRequest {
  string path_prefix = 1;
  int32 max_items = 2;
  string marker = 3;
}

message ListRolesResponse {
  repeated IAMRole roles = 1;
  bool is_truncated = 2;
  string marker = 3;
}

message AttachRolePolicyRequest {
  string role_name = 1;
  string policy_arn = 2;
}

message AttachRolePolicyResponse {
  bool success = 1;
  string message = 2;
}

message DetachRolePolicyRequest {
  string role_name = 1;
  string policy_arn = 2;
}

message DetachRolePolicyResponse {
  bool success = 1;
  string message = 2;
}

// Policy Management Messages
message CreatePolicyRequest {
  string policy_name = 1;
  string policy_document = 2;
  string description = 3;
  string path = 4;
  map<string, string> tags = 5;
}

message CreatePolicyResponse {
  IAMPolicy policy = 1;
}

message DeletePolicyRequest {
  string policy_arn = 1;
}

message DeletePolicyResponse {
  bool success = 1;
  string message = 2;
}

message ListPoliciesRequest {
  string scope = 1; // "All", "AWS", "Local"
  bool only_attached = 2;
  string path_prefix = 3;
  int32 max_items = 4;
  string marker = 5;
}

message ListPoliciesResponse {
  repeated IAMPolicy policies = 1;
  bool is_truncated = 2;
  string marker = 3;
}

message GetPolicyRequest {
  string policy_arn = 1;
}

message GetPolicyResponse {
  IAMPolicy policy = 1;
}

// Access Key Management Messages
message CreateAccessKeyRequest {
  string username = 1;
}

message CreateAccessKeyResponse {
  AccessKey access_key = 1;
}

message DeleteAccessKeyRequest {
  string username = 1;
  string access_key_id = 2;
}

message DeleteAccessKeyResponse {
  bool success = 1;
  string message = 2;
}

message ListAccessKeysRequest {
  string username = 1;
  int32 max_items = 2;
  string marker = 3;
}

message ListAccessKeysResponse {
  repeated AccessKeyMetadata access_keys = 1;
  bool is_truncated = 2;
  string marker = 3;
}

// Common IAM Types
message IAMUser {
  string user_id = 1;
  string username = 2;
  string path = 3;
  string arn = 4;
  google.protobuf.Timestamp create_date = 5;
  map<string, string> tags = 6;
}

message IAMGroup {
  string group_id = 1;
  string group_name = 2;
  string path = 3;
  string arn = 4;
  google.protobuf.Timestamp create_date = 5;
}

message IAMRole {
  string role_id = 1;
  string role_name = 2;
  string path = 3;
  string arn = 4;
  google.protobuf.Timestamp create_date = 5;
  string assume_role_policy_document = 6;
  string description = 7;
  int32 max_session_duration = 8;
  map<string, string> tags = 9;
}

message IAMPolicy {
  string policy_id = 1;
  string policy_name = 2;
  string arn = 3;
  string path = 4;
  string default_version_id = 5;
  int32 attachment_count = 6;
  bool is_attachable = 7;
  string description = 8;
  google.protobuf.Timestamp create_date = 9;
  google.protobuf.Timestamp update_date = 10;
}

message AccessKey {
  string access_key_id = 1;
  string secret_access_key = 2;
  string username = 3;
  string status = 4;
  google.protobuf.Timestamp create_date = 5;
}

message AccessKeyMetadata {
  string access_key_id = 1;
  string username = 2;
  string status = 3;
  google.protobuf.Timestamp create_date = 4;
}

